<resources>
    <string name="app_name">SmartCage</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>

    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>

    <string name="open_nav">Abrir</string>
    <string name="close_nav">Cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>

    <string name="sensores">Sensores</string>
    <string name="waterSensor">Nivel de agua</string>
    <string name="foodlevel">Nivel de comida</string>

    <string name="configuraci_n">Configuración</string>
    <string name="about_us">About us</string>
    <string name="salir">Salir</string>
    <string name="jaulas">Jaulas</string>
    <string name="presencia" />
</resources>